[package]
name = "hello-actix"
version = "0.1.0"
authors = ["José Oliveira <zeehtecnologia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1.0"
async-graphql = "1.16"
async-graphql-actix-web = "1.16.1"